test-legacy/tests/compiler/ast/function_double_comma.txt
error: duplicate comma
 --> tests/compiler/ast/function_double_comma.tql:5:9
  |
5 | a = b(c,,)
  |         ^ 
  |
